2005-09-30  Viren.L  <lviren@novell.com>

	Fixes #258786
	* gui/e-cal-popup.[ch] (e_cal_popup_target_new_select) : Added 
	E_CAL_POPUP_SELECT_NOTCOMPLETE flag.
	* gui/e-cal-menu.[ch] (e_cal_menu_target_new_select) : Added 
	E_CAL_MENU_SELECT_NOTCOMPLETE flag.
	* gui/tasks-control.c (tasks_sensitize_table):
	* gui/e-calendar-table.c (tasks_popup_items): Added the NOT_COMPLETE
	flag.

2005-09-30  Viren.L  <lviren@novell.com>

	Fixes #314599.
	* gui/dialogs/recurrence-page.c (clear_widgets):
	Changed parameter ENDING_FOREVER to ENDING_FOR while invoking 
	e_dialog_option_menu_set, invoked make_ending_count_special ().
	  
2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #273781
	* gui/alarm-notify/alarm-notify-dialog.c:
	(notified_alarms_dialog_new): Set the alarm window to
	appear on the top.

2005-09-30  P. S. Chakravarthi <pchakravarthi@novell.com>

	Fix #274188
	* gui/e-cal-model.c
	(get_dtstart): make use of internal zone information so that
	previous date is not shown in list view for an all-day event.

2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #273847
	* gui/dialogs/comp-editor.c: (comp_editor_get_mime_attach_list): set
	the disposition from the attachment.
	* gui/itip-utils.c: (append_cal_attachments): Send the right disposition
	value.
	* gui/itip-utils.h: Adding variable dipostion to CalMimeAttach structure.

2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #246480
	* gui/e-calendar-view.c: (e_calendar_view_add_event): Remember
       the time if the event is copy pasted in week or month views.	

2005-08-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #270036
	(init_widgets): added the missing signal handler when
	the list selection changes.

	Reworked the patch from Dinesh Layek <ldinesh@novell.com>
	 
2005-08-29  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-calendar-table.c (e_calendar_table_open_task): Set the 
	USER_ORG flag while converting a personal task to assigned one.
