@@ -1,3 +1,13 @@
+2005-09-30  Veerapuram Varadhan <vvaradhan@novell.com>
+
+	Fixes #303702
+	* calendar/conduits/calendar/calendar-conduit.c:
+	(process_multi_day): Call e_cal_component_commit_sequence() after
+	modifying the properties of an ECalComponent and before fetching
+	its icalcomponent.
+
+	Reworked the patch from Dave Malcolm <dmalcolm@redhat.com>
+	
 2005-09-30  Viren.L  <lviren@novell.com>
 
 	Fixes #258786
